# github-utils

./: .coverage  .gitignore  README.md  a.txt  cleanup_repo.sh  install.sh  issues_api.py  pyproject.toml  requirements.txt  utils.py
src/github_utils/: cli.py  config.py  executor.py
src/github_utils/analytics/: __init__.py  monitor.py  snapshot.py
src/github_utils/api/: __init__.py  client.py
src/github_utils/commands/: __init__.py  legacy.py  paint.py  simulate.py  stats.py
src/github_utils/git/: operations.py
src/github_utils/painter/: engine.py  font.py  grid.py  patterns.py  preview.py
src/github_utils/patterns_data/: checkerboard.yaml  heart.yaml  wave.yaml
src/github_utils/realism/: __init__.py  content.py  profile.py  temporal.py
tests/: test_api_client.py  test_cli.py  test_cli_legacy.py  test_cli_paint.py  test_cli_simulate.py  test_cli_stats.py  test_config.py  test_content.py  test_executor.py  test_font.py  test_git_operations.py  test_grid.py  test_integration.py  test_monitor.py  test_painter_engine.py  test_patterns.py  test_preview.py  test_profile.py  test_snapshot.py  test_temporal.py
