[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-utils"
dynamic = ["version"]
description = "GitHub contribution graph painter, activity simulator, and analytics toolkit"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.40",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
github-utils = "github_utils.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_utils = ["patterns_data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "github_utils.__version__"}

[tool.ruff]
target-version = "py310"
